[gd_scene load_steps=6 format=3 uid="uid://cn68h6qjgcyqf"]

[ext_resource type="Script" path="res://Code/SceneCode/Screens/GameManager.gd" id="1_fnwwp"]
[ext_resource type="PackedScene" uid="uid://4gou4dfa1ija" path="res://Scene/Mains/MainMenu.tscn" id="2_lyisp"]
[ext_resource type="AudioStream" uid="uid://705qjjkq5dhp" path="res://Audio/SFX/MenuConfirm.wav" id="3_4q0i6"]
[ext_resource type="AudioStream" uid="uid://o2tniob8ig5x" path="res://Audio/SFX/MenuDeselect.wav" id="4_snur7"]
[ext_resource type="AudioStream" uid="uid://bltd707bj7c8e" path="res://Audio/SFX/MenuMove.wav" id="5_2l50b"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_fnwwp")

[node name="MainMenu" parent="." instance=ExtResource("2_lyisp")]

[node name="SFX" type="Node" parent="."]

[node name="Confirm" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_4q0i6")
bus = &"SFX"

[node name="Back" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_snur7")
bus = &"SFX"

[node name="Menu" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_2l50b")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="battleStart" from="MainMenu" to="." method="_on_change_to_battle"]
[connection signal="chipMenu" from="MainMenu" to="." method="_on_to_chip_menu"]
[connection signal="gearMenu" from="MainMenu" to="." method="_on_to_gear_menu"]
[connection signal="itemMenu" from="MainMenu" to="." method="_on_to_item_menu"]
[connection signal="makeNoise" from="MainMenu" to="." method="makeNoise"]
